Add splash button animations

--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -17,7 +17,8 @@ $gradient3: #5c2e88;
 $gradient4: #C133A3;
 
 // Special colors
-$resume: #d40606;
+$github: #181717;
+$resume: #6F02B5;
 $linkedin: #0d5aa7;
-$itch: #ef8001;
-$email: #efc522;
+$itch: #FA5C5C;
+$email: #43A047;
