Content boxes and headers

--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -5,6 +5,7 @@ Created by Ben Cuan
 
 // Main colors
 $bg: #293241;
+$bg-light: #435166;
 $footer: #272635;
 $highlight: #e097ff;
 $accent: #26FFE6;
