--- a/css/sass/_fonts.scss
+++ b/css/sass/_fonts.scss
@@ -5,6 +5,7 @@ Created by Ben Cuan
 Fonts used:
  - Europa
  - Neue Haas Unica WG
+ - Forma DJR Micro
  - Roboto
 ====================================== */
 
@@ -14,3 +15,4 @@ Fonts used:
 $europa: europa, roboto, Georgia, sans-serif;
 $neue-haas: neue-haas-unica, Helvetica, sans-serif;
 $monospace: roboto-mono, monospace;
+$forma: forma-djr-micro, Helvetica, sans-serif;
