--- a/css/sass/_mixins.scss
+++ b/css/sass/_mixins.scss
@@ -1,5 +1,7 @@
 /* ===================================
 A collection of helpful Sass mixins.
+Created by Ben Cuan with contributions
+from various sources cited below.
 ====================================== */
 
 /**
