--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -32,6 +32,34 @@ html {
   }
 }
 
+.link {
+  text-decoration: none;
+  color: colors.$highlight !important;
+  font-weight: 700;
+  position: relative;
+
+  &:hover {
+    &::before {
+      visibility: visible;
+      transform: scaleX(1);
+    }
+  }
+
+  // Link animation inspired by https://tobiasahlin.com/blog/css-trick-animating-link-underlines/
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -1px;
+    left: 0;
+    background-color: colors.$highlight;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+  }
+}
+
 /* ----------
 Color classes
 ------------- */
@@ -372,33 +400,12 @@ Content
   background: #222;
   transition: box-shadow $anim-speed, transform $anim-speed;
 
-  &::after {
-    position: absolute;
-    content: "";
-    top: calc(-1 * #{$border-width});
-    left: calc(-1 * #{$border-width});
-    z-index: -1;
-    width: calc(100% + #{$border-width} * 2);
-    height: calc(100% + #{$border-width} * 2);
-    background: linear-gradient(60deg,
-        colors.$highlight, colors.$accent);
-    background-size: 300% 300%;
-    background-position: 0 50%;
-    border-radius: calc(2 * #{$border-width});
-  }
+  @include mixins.gradient-border($border-width);
 
   // Gradient border animation inspired by https: //codepen.io/alphardex/pen/vYEYGzp
   &:hover {
     box-shadow: 6px 6px 5px 0px rgb(0, 0, 0);
-    transform: translate(-5%, -3%);
-
-    &::after {
-      background: linear-gradient(60deg,
-          colors.$highlight, colors.$accent);
-      background-size: 300% 300%;
-      background-position: 0 50%;
-      animation: text-animation 4s infinite;
-    }
+    transform: translate(-5%, -2%);
   }
 
   .content {
@@ -409,59 +416,61 @@ Content
     bottom: $border-width;
     border-radius: $border-width;
     background-color: colors.$bg-light;
-    color: white;
     padding: 3%;
   }
 
-
+  .content,
+  .content * {
+    color: white;
+  }
 }
 
-// .content-box {
-//   $border-width: 3px;
-//   border-radius: $border-width;
-//   width: 100%;
-//   font-family: fonts.$europa;
-//   color: white;
-//   padding: 5%;
-//   transform: translateX(-5%);
-//   transition: box-shadow $anim-speed, transform $anim-speed;
+.content-text {
+  @include mixins.responsive-text(20, 25, 30);
+}
 
-//   &::after {
-//     position: absolute;
-//     content: "";
-//     top: calc(-1 * #{$border-width});
-//     left: calc(-1 * #{$border-width});
-//     z-index: -1;
-//     width: calc(100% + #{$border-width} * 2);
-//     height: calc(100% + #{$border-width} * 2);
-//     background: colors.$highlight;
-//     background-size: 300% 300%;
-//     background-position: 0 50%;
-//     border-radius: calc(2 * #{$border-width});
-//     animation: textAnimation 3s infinite;
-//   }
-
-//   // Gradient border animation inspired by https: //codepen.io/alphardex/pen/vYEYGzp
-//   &:hover {
-//     box-shadow: 6px 6px 5px 0px rgba(50, 50, 50, 0.3);
-//     transform: translate(-5%, -3%);
-
-//     &::after {
-//       background: linear-gradient(60deg,
-//           colors.$gradient1, colors.$accent);
-//     }
-//   }
-
-//   .content {
-//     position: absolute;
-//     left: $border-width;
-//     top: $border-width;
-//     right: $border-width;
-//     bottom: $border-width;
-//     border-radius: $border-width;
-//     background-color: #fff;
-//   }
 
 /* ----------
 About
 ------------- */
+
+.about-img {
+  border-radius: 10px;
+  border-width: 3px;
+  position: absolute;
+  right: -5%;
+  bottom: -5%;
+  height: 20rem;
+  width: 20rem;
+  background-color: colors.$logo;
+  filter: brightness(0.8);
+  transition: all 0.5s;
+
+}
+
+#about-content:hover .about-img {
+  transform: scale(1.01);
+  filter: brightness(1);
+  box-shadow: 6px 6px 5px 0px rgb(0, 0, 0);
+}
+
+.tools-text {
+  @include mixins.responsive-text(15, 20, 25);
+  color: rgba(220, 220, 220, 1) !important;
+
+}
+
+@include mixins.screen('mobile') {
+  .tools-text {
+    text-align: center;
+  }
+}
+
+.tool-icons {
+  transform: scale(1.5);
+  text-align: center;
+}
+
+.tools-table {
+  padding-top: 3%;
+}
