Featured projects layout

--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -387,7 +387,11 @@ Content
 .left-head {
   text-align: left;
   transform: translateX(-5%);
-  transition: transform $anim-speed;
+}
+
+.right-head {
+  text-align: right;
+  transform: translateX(5%);
 }
 
 .content-box {
@@ -473,4 +477,93 @@ About
 
 .tools-table {
   padding-top: 3%;
+}
+
+/* ---------------
+Featured Projects
+------------------ */
+
+.feature-content {
+  padding: 1% !important;
+}
+
+.feature-label {
+  border-radius: 20px;
+  height: 80%;
+  width: 80%;
+  padding: 1rem;
+  padding-left: 3rem;
+  font-weight: 700;
+  @include mixins.responsive-text(30, 40, 50);
+  position: relative;
+}
+
+.feature-tag {
+  position: absolute;
+  border-radius: 10px;
+  @include mixins.responsive-text(10, 20, 30);
+  right: -20px;
+  top: -10px;
+  border-radius: 30px;
+  padding: 0.3rem 2rem;
+}
+
+.feature-link {
+  font-size: 60px;
+  margin-left: 2vw;
+  border-radius: 50%;
+  display: inline-block;
+  height: 4vw;
+  width: 4vw;
+  text-align: center;
+  transition: all 0.5s;
+
+  i {
+    transition: all 0.5s;
+    vertical-align: middle;
+    transform: translate(-5px);
+    border-radius: 20%;
+  }
+
+  &:hover i {
+    color: colors.$highlight;
+    transform: scale(1.25) translateY(-10px) !important;
+  }
+}
+
+.feature-link-container {
+  text-align: right;
+}
+
+.feature-img {
+  position: relative;
+  width: 100%;
+  border-radius: 5px;
+  transition: all 0.5s;
+  filter: brightness(0.8);
+  right: 0;
+  bottom: 0;
+}
+
+.feature-img-container {
+  margin: 0 !important;
+  width: 50%;
+}
+
+
+
+@include mixins.screen('mobile') {
+  .feature-img-container {
+    width: 100%;
+  }
+}
+
+.content-box:hover .feature-img {
+  transform: scale(1.01);
+  filter: brightness(1);
+  box-shadow: 6px 6px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.content-box:hover .feature-link i {
+  transform: scale(1.1) translateY(-5px);
 }
