--- a/css/sass/_mixins.scss
+++ b/css/sass/_mixins.scss
@@ -141,3 +141,45 @@ from various sources cited below.
     }
   }
 }
+
+@mixin gradient-button($border-width, $border-radius) {
+
+  border-radius: $border-radius;
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: calc(-1 * #{$border-width});
+    left: calc(-1 * #{$border-width});
+    // z-index: -1;
+    width: calc(100% + #{$border-width} * 2);
+    height: calc(100% + #{$border-width} * 2);
+    background: linear-gradient(60deg,
+        colors.$highlight, colors.$accent);
+    background-size: 300% 300%;
+    background-position: 0 50%;
+    border-radius: $border-radius;
+  }
+
+  &:hover {
+    border: 3px transparent;
+    &::after {
+      background: linear-gradient(60deg,
+          colors.$highlight, colors.$accent);
+      background-size: 300% 300%;
+      background-position: 0 50%;
+      animation: text-animation 2s infinite;
+    }
+  }
+
+  .content {
+    background: colors.$bg;
+    position: relative;
+    z-index: 100;
+    border-radius: $border-radius;
+    padding: 0 3rem;
+    text-align: center;
+    left: 0;
+    color: white;
+  }
+}
