--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -601,6 +601,7 @@ More Projects
     // border: 10px solid transparent;
     transform: scale(1.1) translateY(-10px);
     box-shadow: 2px 6px 6px 0px rgba(0, 0, 0, 1);
+    cursor: pointer;
   }
 }
 
