--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -8,19 +8,19 @@ $bg: #293241;
 $bg-light: #435166;
 $footer: #272635;
 $highlight: #e097ff;
-$accent: #26FFE6;
-$secondary: #3ABEFF;
+$accent: #26ffe6;
+$secondary: #3abeff;
 
 // Gradient colors
 $gradient1: #3b0da2;
-$gradient2: #0C98D4;
+$gradient2: #0c98d4;
 $gradient3: #5c2e88;
-$gradient4: #C133A3;
+$gradient4: #c133a3;
 
 // Special colors
 $github: #181717;
-$resume: #6F02B5;
+$resume: #6f02b5;
 $linkedin: #0d5aa7;
-$itch: #FA5C5C;
-$email: #43A047;
+$itch: #fa5c5c;
+$email: #43a047;
 $logo: #23bcff;
