--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -26,15 +26,16 @@ html {
 }
 
 @include mixins.screen("desktop") {
-  .container {
+  .container:not(#contact) {
     max-width: 80%;
   }
 }
 
 .link {
+  font-family: fonts.$europa;
   text-decoration: none;
   color: colors.$highlight !important;
-  font-weight: 700;
+  font-weight: 500;
   position: relative;
 
   &:hover {
@@ -370,7 +371,6 @@ Content
 #content {
   border-top: 5px solid colors.$highlight;
   background-color: colors.$bg;
-  height: 1000%; //temp
 }
 
 .content-section {
@@ -381,7 +381,7 @@ Content
   color: white;
   font-family: fonts.$forma;
   font-weight: 700;
-  @include mixins.responsive-text(75, 100, 150);
+  @include mixins.responsive-text(75, 100, 125);
   text-decoration: underline;
 }
 
@@ -683,4 +683,58 @@ More Projects
 
 .truncated {
   max-height: 200%;
+}
+
+/* ---------------
+Contact Me
+------------------ */
+.contact-text {
+  color: white;
+  @include mixins.responsive-text(15, 20, 30);
+  font-family: fonts.$europa;
+  font-weight: 300;
+  line-height: 1.3;
+}
+
+.btn-contact {
+  margin: 5vh;
+}
+
+#contact {
+  padding-bottom: 10rem;
+
+  .section-head {
+    margin-top: 0 !important;
+  }
+}
+
+/* ---------------
+Footer
+------------------ */
+#footer {
+  background-color: colors.$footer;
+  width: 100%;
+  padding: 2rem;
+
+  .link {
+    color: white !important;
+
+    &::before {
+      height: 1px;
+      background-color: white;
+    }
+  }
+}
+
+.footer-icon {
+  color: white;
+}
+
+.footer-text {
+  padding: 0.4rem;
+  color: white;
+  @include mixins.responsive-text(10, 15, 20);
+  font-family: fonts.$europa;
+  font-weight: 300;
+  font-style: normal;
 }
