--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -155,6 +155,12 @@ Landing
   border-radius: 10px;
   padding: 2% 2% 5% 5%;
   margin-top: 2%;
+  transition: all $anim-speed;
+  
+  &:hover {
+    transform: scale(1.005) translate(-49.8%, -51%) !important;
+    box-shadow: 2px 6px 6px 0px rgba(0, 0, 0, 0.6);
+  }
 }
 
 // Landing text styles
@@ -210,6 +216,7 @@ Landing
 
 // Landing buttons
 .landing-btn {
+  transition: all $anim-speed;
   border-radius: 50%;
   height: 8vh;
   width: 8vh;
