--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -24,3 +24,7 @@ $linkedin: #0d5aa7;
 $itch: #fa5c5c;
 $email: #43a047;
 $logo: #23bcff;
+
+$about: #ef8354;
+$projects: #38bc76;
+$contact: #a63a50;
