--- a/css/sass/_mixins.scss
+++ b/css/sass/_mixins.scss
@@ -25,6 +25,7 @@ from various sources cited below.
   $desktop: "(min-width: 1366px)";
   $tablet: "(min-width: 768px) and (max-width: 1365px)";
   $mobile: "(max-width: 767px)";
+  $not-mobile: "(min-width: 768px)";
 
   @if $size==desktop {
     @media only screen and #{$desktop} {
@@ -36,6 +37,10 @@ from various sources cited below.
     }
   } @else if $size==mobile {
     @media only screen and #{$mobile} {
+      @content;
+    }
+  } @else if $size=='not-mobile' {
+    @media only screen and #{$not-mobile} {
       @content;
     }
   } @else {
