--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -10,6 +10,7 @@ Imports
 @use '_colors';
 @use '_fonts';
 @use '_animations';
+@use '_burgers';
 
 /* ----------
 Variables
@@ -26,9 +27,29 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 @include mixins.screen("desktop") {
   .container:not(#contact) {
     max-width: 80%;
+  }
+}
+
+@include mixins.screen("mobile") {
+  .no-mobile, .no-mobile * {
+    display: none;
+  }
+
+  * {
+    max-width: 100vw;
+  }
+}
+@include mixins.screen("not-mobile") {
+  .mobile, .mobile * {
+    display: none;
   }
 }
 
@@ -90,7 +111,8 @@ Color classes
   background-color: colors.$itch;
 }
 
-.logo-color, .home-color {
+.logo-color,
+.home-color {
   background-color: colors.$logo;
 }
 
@@ -114,6 +136,7 @@ Landing
   height: 100%;
   width: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .splash-gradient {
@@ -130,6 +153,7 @@ Landing
     width: 400%;
     height: 400%;
     z-index: -1;
+    overflow-x: hidden;
   }
 
   &:after {
@@ -309,8 +333,7 @@ Navbar
 nav {
   position: fixed;
   top: 0;
-  left: -10%;
-  width: 120%;
+  width: 100vw;
   height: $nav-height;
   overflow: hidden;
   background-color: rgba(255, 255, 255, 0.3);
@@ -347,62 +370,90 @@ nav {
     top: 0;
     z-index: 100;
   }
+}
 
-  .col-2,
-  .col-3,
-  .col-1 {
-    margin: 0 !important;
-    height: 100%;
-    display: table;
-    transition: transform 0.25s;
+@include mixins.screen("mobile") {
+  nav {
+    height: $nav-height * 0.75;
+    img {
+      max-height: 30%;
+      max-width: $nav-height * 0.5;
+      left: 0;
+    }
 
-    &:hover {
-      cursor: pointer;
-      transform: scale(110%);
+    .col-1,
+    .col-2,
+    .col-3 {
+      max-height: 100%;
+      width: 100vw;
+      margin: 0 !important;
+      left: 0;
+      padding-top: $nav-height * 0.2;
+    }
+
+    .row {
+      left: 0;
     }
   }
+}
+@include mixins.screen("not-mobile") {
+  nav {
+    .col-2,
+    .col-3,
+    .col-1 {
+      margin: 0 !important;
+      height: 100%;
+      display: table;
+      transition: transform 0.25s;
 
-  .col-3 {
-    right: 0;
-    text-align: right;
-  }
-
-  a,
-  i {
-    font-family: fonts.$europa;
-    color: white;
-    display: table-cell;
-    vertical-align: middle;
-    text-decoration: none;
-    @include mixins.responsive-text(0, 25, 30);
-  }
-
-  i {
-    padding-bottom: 1%;
-  }
-
-  img {
-    height: 70%;
-    max-width: 70%;
-  }
-
-  .col-1 {
-    transition: transform $anim-speed;
-
-    &:hover {
-      transform: scale(110%);
+      &:hover {
+        cursor: pointer;
+        transform: scale(110%);
+      }
     }
-  }
 
-  .resume-button {
-    display: inline-block;
-    background-color: colors.$resume;
-    padding: 0 1.25rem;
-    border-radius: 30px;
-    margin-top: ($nav-height) / 2 - 1.25rem;
-    // width: 50%;
-    // height: 80%;
-    text-align: center;
+    .col-3 {
+      right: 0;
+      text-align: right;
+    }
+
+    a,
+    i {
+      font-family: fonts.$europa;
+      color: white;
+      display: table-cell;
+      vertical-align: middle;
+      text-decoration: none;
+      @include mixins.responsive-text(0, 25, 30);
+    }
+
+    i {
+      padding-bottom: 1%;
+    }
+
+    img {
+      height: 70%;
+      max-width: 70%;
+    }
+
+    .col-1 {
+      transition: transform $anim-speed;
+
+      &:hover {
+        transform: scale(110%);
+      }
+    }
+
+    .resume-button {
+      display: inline-block;
+      background-color: colors.$resume;
+      padding: 0 1.25rem;
+      border-radius: 30px;
+      margin-top: ($nav-height) / 2 - 1.25rem;
+      // width: 50%;
+      // height: 80%;
+      text-align: center;
+    }
   }
 }
 
@@ -424,11 +475,8 @@ Content
   font-weight: 700;
   @include mixins.responsive-text(75, 100, 125);
   text-decoration: underline;
-}
-
-.left-head {
-  text-align: left;
-  transform: translateX(-5%);
+  line-height: 1.1;
+  padding-bottom: 1rem;
 }
 
 .center-head {
@@ -436,9 +484,28 @@ Content
   text-align: center;
 }
 
-.right-head {
-  text-align: right;
-  transform: translateX(5%);
+@include mixins.screen("not-mobile") {
+  .left-head {
+    text-align: left;
+    transform: translateX(-5%);
+  }
+  .right-head {
+    text-align: right;
+    transform: translateX(5%);
+  }
+}
+
+
+@include mixins.screen('not-mobile') {
+  .content-box {
+    transform: translateX(-5%);
+  }
+}
+
+@include mixins.screen('mobile') {
+  .content-box {
+    transform: translateX(0px);
+  }
 }
 
 .content-box {
@@ -447,7 +514,6 @@ Content
   width: 100%;
   font-family: fonts.$europa;
   color: white;
-  transform: translateX(-5%);
   background: #222;
   transition: box-shadow $anim-speed, transform $anim-speed;
 
@@ -487,25 +553,47 @@ About
 .about-img {
   border-radius: 10px;
   border-width: 3px;
-  position: absolute;
-  right: -5%;
-  bottom: -5%;
-  height: 20rem;
-  width: 20rem;
   background-color: colors.$logo;
-  filter: brightness(0.8);
   transition: all 0.5s;
 }
 
-#about-content:hover .about-img {
-  transform: scale(1.01);
-  filter: brightness(1);
-  box-shadow: 6px 6px 5px 0px rgb(0, 0, 0);
+@include mixins.screen("not-mobile") {
+  .about-img {
+    position: absolute;
+    right: -5%;
+    bottom: -5%;
+    height: 20rem;
+    width: 20rem;
+    filter: brightness(0.8);
+  }
+
+  #about-content:hover .about-img {
+    transform: scale(1.01);
+    filter: brightness(1);
+    box-shadow: 6px 6px 5px 0px rgb(0, 0, 0);
+  }
+}
+
+@include mixins.screen("mobile") {
+  .about-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .tools-text {
+      margin-top: 0 !important;
+  }
+
+  .tool-icons {
+    margin-bottom: 0 !important;
+  }
 }
 
 .tools-text {
   @include mixins.responsive-text(15, 20, 25);
   color: rgba(220, 220, 220, 1) !important;
+
 }
 
 @include mixins.screen("mobile") {
@@ -542,6 +630,16 @@ Featured Projects
   position: relative;
 }
 
+@include mixins.screen("mobile") {
+  .feature-label {
+    padding: 1rem !important;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+}
+
 .feature-tag {
   position: absolute;
   border-radius: 10px;
@@ -553,32 +651,38 @@ Featured Projects
 }
 
 .feature-link {
-  font-size: 60px;
-  margin-left: 2vw;
-  border-radius: 50%;
-  display: inline-block;
-  height: 4vw;
-  width: 4vw;
-  text-align: center;
-  transition: all 0.5s;
+  font-size: 45px;
+}
 
-  i {
+@include mixins.screen('not-mobile') {
+  .feature-link {
+    margin-left: 2vw;
+    border-radius: 50%;
+    display: inline-block;
+    height: 4vw;
+    width: 4vw;
+    text-align: center;
     transition: all 0.5s;
-    vertical-align: middle;
-    transform: translate(-5px);
-    border-radius: 20%;
+  
+    i {
+      transition: all 0.5s;
+      vertical-align: middle;
+      transform: translate(-5px);
+      border-radius: 20%;
+    }
+  
+    &:hover i {
+      color: colors.$highlight;
+      transform: scale(1.25) translateY(-10px) !important;
+      cursor: pointer;
+    }
   }
-
-  &:hover i {
-    color: colors.$highlight;
-    transform: scale(1.25) translateY(-10px) !important;
-    cursor: pointer;
+  .feature-link-container {
+    text-align: right;
   }
 }
 
-.feature-link-container {
-  text-align: right;
-}
+
 
 .feature-img {
   position: relative;
@@ -598,6 +702,13 @@ Featured Projects
 @include mixins.screen("mobile") {
   .feature-img-container {
     width: 100%;
+  }
+
+  .feature-link-container {
+    text-align: center;
+    padding: 1rem;
+    font-size: 50px;
+    margin: 0 !important;
   }
 }
 
@@ -628,7 +739,7 @@ More Projects
   @include mixins.gradient-button(5px, 30rem);
   @include mixins.responsive-text(20, 30, 50);
   // padding: 0 3vw;
-  margin: 1vw;
+  margin: 0.5rem 1rem;
   // border: transparent 3px;
   // border-radius: 30rem;
   font-weight: 700;
@@ -661,10 +772,16 @@ More Projects
     transform: translateY(-8px) scale(1.01);
   }
 
+  @include mixins.screen('not-mobile') {
+    .content {
+      min-height: 27rem;
+    }
+  }
+
   .content {
     background: colors.$bg;
     transition: all $anim-speed;
-    min-height: 27rem;
+    
 
     &:hover {
       background: colors.$bg-light;
@@ -742,11 +859,11 @@ Contact Me
 }
 
 #contact {
-  padding-top: 10rem !important;
   padding-bottom: 10rem;
   border: 0 !important;
 
   .section-head {
+    padding-top: 10rem;
     margin-top: 0 !important;
   }
 }
@@ -756,8 +873,8 @@ Footer
 ------------------ */
 #footer {
   background-color: colors.$footer;
-  width: 100%;
-  padding: 2rem;
+  width: 100vw;
+  padding: 1.5rem 0rem;
 
   .link {
     color: white !important;
