--- a/css/sass/_mixins.scss
+++ b/css/sass/_mixins.scss
@@ -26,6 +26,7 @@ from various sources cited below.
   $tablet: "(min-width: 768px) and (max-width: 1365px)";
   $mobile: "(max-width: 767px)";
   $not-mobile: "(min-width: 768px)";
+  $not-desktop: "(max-width: 1365px)";
 
   @if $size==desktop {
     @media only screen and #{$desktop} {
@@ -41,6 +42,10 @@ from various sources cited below.
     }
   } @else if $size=='not-mobile' {
     @media only screen and #{$not-mobile} {
+      @content;
+    }
+  } @else if $size=='not-desktop' {
+    @media only screen and #{$not-desktop} {
       @content;
     }
   } @else {
