--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -46,6 +46,10 @@ html, body {
   * {
     max-width: 100vw;
   }
+
+  .mobile-center {
+    text-align: center;
+  }
 }
 @include mixins.screen("not-mobile") {
   .mobile-only, .mobile-only * {
@@ -133,10 +137,16 @@ Landing
 ------------- */
 
 #landing {
-  height: 100%;
   width: 100%;
   overflow: hidden;
   position: relative;
+  height: 160%;
+}
+
+@include mixins.screen('desktop') {
+  #landing {
+    height: 100%;
+  }
 }
 
 .splash-gradient {
@@ -206,6 +216,14 @@ Landing
   }
 }
 
+@include mixins.screen('not-desktop') {
+  .splash-box {
+    height: 80%;
+    width: 85%;
+  }
+  
+}
+
 // Landing text styles
 .splash-hi {
   margin-top: 5%;
@@ -251,6 +269,16 @@ Landing
   z-index: 15;
 }
 
+.mobile-splash-buttons {
+  padding-top: 2rem;
+}
+
+@include mixins.screen('tablet') {
+  .splash-button-container {
+    display: none;
+  }
+}
+
 .splash-button-col {
   height: 100%;
   text-align: center;
@@ -286,14 +314,27 @@ Landing
     @include mixins.screen("desktop") {
       padding-top: 23%;
     }
+  }
+}
 
-    @include mixins.screen("tablet") {
-      padding-top: 26%;
-    }
+.mobile-landing-btn {
+  font-family: fonts.$forma;
+  width: 80%;
+  color: white;
+  border-radius: 50px;
+  font-size: 45px;
+  margin: 1rem auto;
+  padding-top: 0.5rem;
+  @include mixins.responsive-text(30, 45, 60);
+  i {
+    padding: 1rem !important;
+    color: white;
+  }
+}
 
-    @include mixins.screen("mobile") {
-      padding-top: 30%;
-    }
+@include mixins.screen('tablet') {
+  .mobile-landing-btn {
+      width: 60%;
   }
 }
 
